2006-11-02  Timothy Brownawell  <tbrownaw@gmail.com>

	Allow automate commands to take options. Change "automate stdio"
	error handling (exit instead of returning usage information when
	given an invalid command line) and bump automate version. Increase
	default "automate stdio" blocksize to 32k.

2006-11-02  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	*  cmd_automate.cc, option.cc, options_list.hh: fixes for sun studio

2006-11-01  Richard Levitte  <richard@levitte.org>

	* po/sv.po: A fuzzy to fix.

2006-10-31  Benoît Dejean  <benoit@placenet.org>

	* std_hooks.lua (ignore_file): Fixed many patterns.
	Also added gettext and intltool related patterns.

2006-10-31  Nathaniel Smith  <njs@pobox.com>

	* work.cc (perform_rename): Tweak error message that just annoyed
	me.

2006-10-26  Richard Levitte  <richard@levitte.org>

	* tests/disapproving_with_message/__driver__.lua (r_sha): New
	rudimentary test to check that disapprove with messages works.
	* testsuite.lua: Add it.

2006-10-26  Richard Levitte  <richard@levitte.org>

	* commands.cc (process_commit_message_args): Only prepend the
	message prefix is it's more than 0 characters.

2006-10-26  Richard Levitte  <richard@levitte.org>

	* cmd_ws_commit.cc (CMD(disapprove)): Make it possible to specify
	extra message lines to be added after the standard "disapprove"
	line, as well as author and date.  Makes use of the following
	change:
	* commands.cc,cmd.hh (process_commit_message_args): Add an extra
	parameter to have as a prefix of the user message.  If the prefix
	exists, there will always be a message containing it.

2006-10-24  Matthew Gregan  <kinetik@orcon.net.nz>

	* lua/lstrlib.cc: Patch for Lua 5.1.1 bug #3, from
	lua.org/bugs.html.

2006-10-24  Timothy Brownawell  <tbrownaw@gmail.com>

	Fix an epoch refinement bug. If we already have an epoch for a branch
	we're receiving and don't have any revisions for, we will be re-sent
	that epoch. There is code to ignore received items that we already