@@ -16,6 +16,7 @@
 #include <boost/shared_ptr.hpp>
 
 #include "options.hh"
+#include "vocab.hh"
 
 using boost::shared_ptr;
 
@@ -36,7 +37,8 @@ namespace commands {
   void explain_usage(std::string const & cmd, std::ostream & out);
   std::string complete_command(std::string const & cmd);
   int process(app_state & app, std::string const & cmd, std::vector<utf8> const & args);
-  options::options_type command_options(std::string const & cmd);
+  options::options_type command_options(std::vector<utf8> const & cmdline);
+  options::options_type toplevel_command_options(std::string const & cmd);
 };
 
 // Local Variables:
