@@ -1,5 +1,12 @@
 2006-11-02  Timothy Brownawell  <tbrownaw@gmail.com>
 
+	Allow commands with subcommands (such as automate) to take
+	different options depending on which subcommand was called.
+	Make AUTOMATE() specify what options are taken. Test (and
+	fix) having spaces between automate commands.
+
+2006-11-02  Timothy Brownawell  <tbrownaw@gmail.com>
+
 	Allow automate commands to take options. Change "automate stdio"
 	error handling (exit instead of returning usage information when
 	given an invalid command line) and bump automate version. Increase
